--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
         </script>
-    </head>
+        <style>.navbar-light .navbar-brand {
+            background:#4AAAA5;
+            color: white; 
+        }
+            </style> 
+            <link rel="stylesheet" href="assets/css/style.css"/>
+            </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="index.html">Scott P. Wells</a>
@@ -30,12 +36,6 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Contact</a>
-                </li>
-                  </a>
-                  </div>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                 </li>
               </ul> 
             </div>
