added my picture container, background image columns and rows

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             color: white; 
         }
             </style> 
-            <link rel="stylesheet" href="assets/css/style.css"/>
+            <link rel="stylesheet" href="./assets/css/style.css"/>
             </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -42,13 +42,13 @@
           </nav>
           <div class="container">
               <div class="row">
-              <div class="col-sm-8 featured-section">
+              <div class="col-sm-12 featured-section">
                <h1 class="teal"> About Me </h1>
+               <div class="col-sm-8 featured section">
+               <img src="C:\Users\scott\OneDrive\Desktop\images\Scott Wells 140 .jpg" alt="Picture of Scott Wells" class="img-thumbnail">
+               <div class="col-sm-4 featured section">
                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nemo sequi ipsa deserunt officiis qui unde suscipit ea sit, quam repellendus labore numquam nesciunt neque ratione nostrum aliquid quae quasi.</P>
-          </div>
-
-       
-        
-        <script src="" async defer></script>
+              </div>
+              <script src="" async defer></script>
     </body>
 </html>
