added image folder to assets folder under directory to fix image

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <div class="col-sm-12 featured-section">
                <h1 class="teal"> About Me </h1>
                <div class="col-sm-8 featured section">
-               <img src="C:\Users\scott\gt-pt\homework\scottpwells-portfolio-2020\assets\images\Scott Wells 140 .jpg" alt="Picture of Scott Wells" class="img-thumbnail">
+               <img src="assets\images\Scott Wells 140 .jpg" alt="" class="img-thumbnail">
                <div class="col-sm-4 featured section">
                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nemo sequi ipsa deserunt officiis qui unde suscipit ea sit, quam repellendus labore numquam nesciunt neque ratione nostrum aliquid quae quasi.</P>
               </div>
