--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <script>
+        
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
             color: white; 
         }
             </style> 
-            <link rel="stylesheet" href="./assets/css/style.css"/>
+            <link rel="stylesheet" href="assets/css/style.css">
             </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -45,7 +45,7 @@
               <div class="col-sm-12 featured-section">
                <h1 class="teal"> About Me </h1>
                <div class="col-sm-8 featured section">
-               <img src="assets\images\Scott Wells 140 .jpg" alt="" class="img-thumbnail">
+               <img src="assets\css\images\scottwells140.jpg" alt="Picture of Scott Wells" class="img-thumbnail">
                <div class="col-sm-4 featured section">
                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nemo sequi ipsa deserunt officiis qui unde suscipit ea sit, quam repellendus labore numquam nesciunt neque ratione nostrum aliquid quae quasi.</P>
               </div>
