--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
         </script>
         <style>.navbar-light .navbar-brand {
+            font-size: 24pt;
+            font-weight: strong;           
             background:teal;
-            color: white; 
+            color: white;   
         }
             </style> 
             <link rel="stylesheet" href="assets/css/style.css">
