--- a/index.html
+++ b/index.html
@@ -44,12 +44,22 @@
           </nav>
           <div class="container">
               <div class="row">
-              <div class="col-sm-12 featured-section">
+              <div class="col-sm-8 featured-section">
+                <div class="row">
+                <div class="col-sm-12">
                <h1 class="teal"> About Me </h1>
-               <div class="col-sm-8 featured section">
-               <img src="assets\css\images\scottwells140.jpg" alt="Picture of Scott Wells" class="img-thumbnail">
+               <hr>
+                </div>
+                </div>
+                <div class="row">
                <div class="col-sm-4 featured section">
-               <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nemo sequi ipsa deserunt officiis qui unde suscipit ea sit, quam repellendus labore numquam nesciunt neque ratione nostrum aliquid quae quasi.</P>
+               <img src="assets\css\images\scottwells140.jpg" alt="Picture of Scott Wells" class="img-thumbnail">
+               </div>
+               <div class="col-sm-8 featured section">
+               <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nemo sequi ipsa deserunt officiis qui unde suscipit ea sit, quam repellendus labore numquam nesciunt neque ratione nostrum aliquid quae quasi.
+                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque modi quod nulla facilis exercitationem a unde, laudantium optio sunt ipsa, delectus dolorum debitis laborum officia. Alias excepturi maiores fugit ad?
+                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nemo, iure neque sequi unde maxime sunt amet culpa fugiat obcaecati reprehenderit, voluptatum eius, qui nulla odit quidem omnis libero <maiores class="lorem"></maiores>
+               </P>
               </div>
               <script src="" async defer></script>
     </body>
