--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
                 </div>
                 <div class="row">
                <div class="col-sm-4 featured section">
-               <img src="assets\css\images\scottwells140.jpg" alt="Picture of Scott Wells" class="img-thumbnail">
+               <img src="assets\css\images\scottwells200.jpg" alt="Picture of Scott Wells" class="img-thumbnail">
                </div>
                <div class="col-sm-8 featured section">
                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nemo sequi ipsa deserunt officiis qui unde suscipit ea sit, quam repellendus labore numquam nesciunt neque ratione nostrum aliquid quae quasi.
                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque modi quod nulla facilis exercitationem a unde, laudantium optio sunt ipsa, delectus dolorum debitis laborum officia. Alias excepturi maiores fugit ad?
-                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nemo, iure neque sequi unde maxime sunt amet culpa fugiat obcaecati reprehenderit, voluptatum eius, qui nulla odit quidem omnis libero <maiores class="lorem"></maiores>
+                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nemo, iure neque sequi unde maxime sunt amet culpa fugiat obcaecati reprehenderit, voluptatum eius, qui nulla odit quidem omnis liberal</P>
+
                </P>
               </div>
               <script src="" async defer></script>
