added footer aligned to left

--- a/index.html
+++ b/index.html
@@ -41,8 +41,12 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque modi quod nulla facilis exercitationem a unde, laudantium optio sunt ipsa, delectus dolorum debitis laborum officia. Alias excepturi maiores fugit ad?
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nemo, iure neque sequi unde maxime sunt amet culpa fugiat obcaecati reprehenderit, voluptatum eius, qui nulla odit quidem omnis liberal
                 </p>
-                
+                </div>
               </div>
+              <footer class="footer">
+              <h5>&copy; Copyright 2020</h5>
+              </footer>
+              
             </div>
                     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
                     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
