--- a/contact.html
+++ b/contact.html
@@ -29,10 +29,10 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                   <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-                <li><a class="nav-link" href="index.html">About</a></li>
+                  <li class="nav-item active">
+                   <a class="nav-link" href="index.html">About</a></li>
               </ul> 
             </div>
           </nav>
