--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                <div class="row"></div>
               <div class="card" id="featured-section">
                 <div class="row">
+                  <div class="col-sm-8">
                 <div class="card-title"><h4>About Me</h4></div>
                 </div>
                 <p> <img src="assets\images\scottwells180_180_.jpg" alt="Picture of Scott Wells" class="img-thumbnail">olor sit amet consectetur adipisicing elit. Maxime nemo sequi ipsa deserunt officiis qui unde suscipit ea sit, quam repellendus labore numquam nesciunt neque ratione nostrum aliquid quae quasi.
