--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
                   <div class="col-sm-8">
                 <div class="card-title"><h4>About Me</h4></div>
                 </div>
-                <p> <img src="assets\images\scottwells180_180_.jpg" alt="Picture of Scott Wells" class="img-thumbnail">olor sit amet consectetur adipisicing elit. Maxime nemo sequi ipsa deserunt officiis qui unde suscipit ea sit, quam repellendus labore numquam nesciunt neque ratione nostrum aliquid quae quasi.
-              
+                <p> <img src="assets\images\scottwells180_180_.jpg" alt="Picture of Scott Wells" class="img-thumbnail">olor sit amet consectetur adipisicing elit. Maxime nemo sequi ipsa deserunt officiis qui unde suscipit ea sit, quam repellendus labore numquam nesciunt neque ratione nostrum aliquid quae quasi
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque modi quod nulla facilis exercitationem a unde, laudantium optio sunt ipsa, delectus dolorum debitis laborum officia. Alias excepturi maiores fugit ad?
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nemo, iure neque sequi unde maxime sunt amet culpa fugiat obcaecati reprehenderit, voluptatum eius, qui nulla odit quidem omnis liberal
                 </p>
