--- a/index.html
+++ b/index.html
@@ -31,15 +31,19 @@
 
             <div class="container">
                <div class="row"></div>
+               <div class="col-sm-8">
               <div class="card" id="featured-section">
                 <div class="row">
-                  <div class="col-sm-8">
+                  <div class="col-sm-12">
                 <div class="card-title"><h4>About Me</h4></div>
+                <hr>
                 </div>
-                <p> <img src="assets\images\scottwells180_180_.jpg" alt="Picture of Scott Wells" class="img-thumbnail">olor sit amet consectetur adipisicing elit. Maxime nemo sequi ipsa deserunt officiis qui unde suscipit ea sit, quam repellendus labore numquam nesciunt neque ratione nostrum aliquid quae quasi
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque modi quod nulla facilis exercitationem a unde, laudantium optio sunt ipsa, delectus dolorum debitis laborum officia. Alias excepturi maiores fugit ad?
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nemo, iure neque sequi unde maxime sunt amet culpa fugiat obcaecati reprehenderit, voluptatum eius, qui nulla odit quidem omnis liberal
-                </p>
+                <div class="col-md-12">
+                  <img src="assets\images\scottwells180_180_.jpg" class="img-thumbnail" ALIGN="left">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste molestiae aliquam optio mollitia, unde quas eaque voluptatem dignissimos eos maiores magni reprehenderit nisi, corrupti nemo hic id cum quasi officiis!
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum vitae velit dolore impedit excepturi placeat beatae porro similique nobis mollitia dolorum atque debitis deleniti cum sequi, doloribus at quidem veritatis!
+                  </p>
+                  </div>
                 </div>
               </div>
               <footer class="footer">
