--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <hr>
                 </div>
                 <div class="col-md-12">
-                  <img src="assets\images\scottwells180_180_.jpg" class="img-thumbnail" ALIGN="left">
+                  <img src="assets\images\scottwells180_180_.jpg" class="img-thumbnail">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste molestiae aliquam optio mollitia, unde quas eaque voluptatem dignissimos eos maiores magni reprehenderit nisi, corrupti nemo hic id cum quasi officiis!
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum vitae velit dolore impedit excepturi placeat beatae porro similique nobis mollitia dolorum atque debitis deleniti cum sequi, doloribus at quidem veritatis!
                   </p>
