added portfolio placeholder pictures

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
                   <img src="assets\images\scottwells180_180_.jpg" class="img-thumbnail">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste molestiae aliquam optio mollitia, unde quas eaque voluptatem dignissimos eos maiores magni reprehenderit nisi, corrupti nemo hic id cum quasi officiis!
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum vitae velit dolore impedit excepturi placeat beatae porro similique nobis mollitia dolorum atque debitis deleniti cum sequi, doloribus at quidem veritatis!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste sequi consequatur doloremque non deleniti repudiandae accusamus ratione officiis recusandae rem necessitatibus, molestiae incidunt minima qui optio odit ullam? Itaque, numquam.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis ullam voluptate delectus nulla reiciendis odit, id magnam fuga veniam qui consequatur soluta consectetur officiis quae beatae aspernatur voluptatibus ipsum dignissimos?
+                  </p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem illo suscipit consequatur nobis distinctio enim tempora numquam earum? Dolore totam nam laborum consectetur. Odit totam ullam ducimus aliquid vel quod.
                   </p>
                   </div>
                 </div>
