--- a/portfolio.html
+++ b/portfolio.html
@@ -32,10 +32,28 @@
             </div>
           </nav>
           <div class="container">
+            <div class="container">
               <div class="row">
-              <div class="col-sm-8 featured-section">
-               <h1 class="teal"> Portfolio</h1>
-               
+                <div class="col-sm-6">
+                  <img src="https://www.fillmurray.com/350/350" alt="My future Portfolio Picture" class="img-thumbnail">
+                </div>
+                <div class="col-sm-6">
+                  <img src="https://www.fillmurray.com/350/350" alt="My future Portfolio Picture" class="img-thumbnail">
+                </div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-6">
+                    <img src="https://www.fillmurray.com/350/350" alt="My future Portfolio Picture" class="img-thumbnail">
+                  </div>
+                  <div class="col-sm-6">
+                    <img src="https://www.fillmurray.com/350/350" alt="My future Portfolio Picture" class="img-thumbnail">
+                  </div>
+                    <div class="row">
+                  <div class="col-sm-12">
+                  <img src="https://www.fillmurray.com/350/350" alt="My future Portfolio Picture" class="img-thumbnail">
+                      </div>
+                  </div> 
+                </div>
           </div>
 
           <footer class="footer">
