updated contact page with new form and updated portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,12 +6,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <style>.navbar-light .navbar-brand {
-            background:teal;
-            color: white; 
-        }
-            </style> 
-            <link rel="stylesheet" href="assets/css/style.css"/>
+        <link rel="stylesheet" href="assets/css/style.css">
             </head>
             <body style="background-image: url('./assets/images/ignasipatterns.png')">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -31,26 +26,30 @@
               </ul> 
             </div>
           </nav>
-          <div class="container">
-            <div class="container">
+          <div class="row"></div>
+               <div class="col-sm-8">
+              <div class="portfolio" id="portfolio-featured-section">
+                <div class="row">
+                  <div class="col-sm-12">
+                <div class="card-title"><h4>Portfolio</h4></div>
+                <hr>
               <div class="row">
                 <div class="col-sm-6">
-                  <img src="https://www.fillmurray.com/350/350" alt="My future Portfolio Picture" class="img-thumbnail">
+                  <img src="https://www.fillmurray.com/350/350" alt="My future Portfolio Picture" class="portfolio-img-thumbnail">
                 </div>
                 <div class="col-sm-6">
-                  <img src="https://www.fillmurray.com/350/350" alt="My future Portfolio Picture" class="img-thumbnail">
-                </div>
+                  <img src="https://www.fillmurray.com/350/350" alt="My future Portfolio Picture" class="portfolio-img-thumbnail">
                 </div>
                 <div class="row">
                   <div class="col-sm-6">
-                    <img src="https://www.fillmurray.com/350/350" alt="My future Portfolio Picture" class="img-thumbnail">
-                  </div>
+                    <img src="https://www.fillmurray.com/350/350" alt="My future Portfolio Picture" class="portfolio-img-thumbnail">
+                    </div>
                   <div class="col-sm-6">
-                    <img src="https://www.fillmurray.com/350/350" alt="My future Portfolio Picture" class="img-thumbnail">
+                    <img src="https://www.fillmurray.com/350/350" alt="My future Portfolio Picture" class="portfolio-img-thumbnail">
                   </div>
                     <div class="row">
                   <div class="col-sm-12">
-                  <img src="https://www.fillmurray.com/350/350" alt="My future Portfolio Picture" class="img-thumbnail">
+                  <img src="https://www.fillmurray.com/350/350" alt="My future Portfolio Picture" class="portfolio-img-thumbnail">
                       </div>
                   </div> 
                 </div>
