--- a/contact.html
+++ b/contact.html
@@ -36,32 +36,35 @@
               </ul> 
             </div>
           </nav>
-          <div class="container">
-            <div class="row"></div>
-           <div class="form" id="featured-section">
-             <div class="row">
-             <div class="col-sm-3">
-             <div class="form-title"><h4>Contact</h4></div>
-             <form>
-              <div class="form-group">
-                <label for="colFormLabelSm" class="col-xs-4 col-form-label col-form-label-sm">Name</label>
-                <div class="col-sm-10">
-                  <input type="email" class="form-control form-control-sm" id="colFormLabelSm" placeholder="Name">
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="colFormLabel" class="col-xs-4 col-form-label">Email</label>
-                <div class="col-sm-10">
-                  <input type="email" class="form-control" id="colFormLabel" placeholder="Email">
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="colFormLabelLg" class="col-sm-4 col-form-label col-form-label-lg">Message</label>
-                <div class="col-sm-10">
-                  <input type="email" class="form-control form-control-lg" id="colFormLabelLg" placeholder="Message">
-                </div>
-              </div>
-            </form>
+         </div>
+         <div class="container">
+          <div class="row"></div>
+          <div class="col-sm-12">
+         <div class="form" id="form-featured-section">
+           <div class="row">
+             <div class="col-sm-12">
+           <div class="card-title"><h4>Contact</h4></div>
+           <hr>
+         <form>
+          <div class="form-group-row">
+            <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Name</label>
+            <div class="col-sm-10">
+              <input type="email" class="form-control form-control-sm" id="colFormLabelSm" placeholder="Name">
+            </div>
+          </div>
+          <div class="form-group-row">
+            <label for="colFormLabel" class="col-sm-2 col-form-label">Email</label>
+            <div class="col-sm-10">
+              <input type="email" class="form-control" id="colFormLabel" placeholder="Email">
+            </div>
+          </div>
+          <div class="form-group-row">
+            <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg">Message</label>
+            <div class="col-sm-10">
+              <input type="email" class="form-control form-control-lg" id="colFormLabelLg" placeholder="Message">
+            </div>
+          </div>
+        </form>
              </div>
                
           </div>
