updated with bio, linked in, and email phone number

--- a/index.html
+++ b/index.html
@@ -40,12 +40,18 @@
                 </div>
                 <div class="col-md-12">
                   <img src="assets\images\scottwells180_180_.jpg" class="img-thumbnail">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste molestiae aliquam optio mollitia, unde quas eaque voluptatem dignissimos eos maiores magni reprehenderit nisi, corrupti nemo hic id cum quasi officiis!
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum vitae velit dolore impedit excepturi placeat beatae porro similique nobis mollitia dolorum atque debitis deleniti cum sequi, doloribus at quidem veritatis!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste sequi consequatur doloremque non deleniti repudiandae accusamus ratione officiis recusandae rem necessitatibus, molestiae incidunt minima qui optio odit ullam? Itaque, numquam.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis ullam voluptate delectus nulla reiciendis odit, id magnam fuga veniam qui consequatur soluta consectetur officiis quae beatae aspernatur voluptatibus ipsum dignissimos?
-                  </p>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem illo suscipit consequatur nobis distinctio enim tempora numquam earum? Dolore totam nam laborum consectetur. Odit totam ullam ducimus aliquid vel quod.
+                  <p> My name is Scott Wells I grew up in Bowling Green, Kentucky. After highschool I joined the United States Army and I served as a enlisted cannoneer at Fort Hood, Texas.
+                     Upon completion of my service I was honorably discharged from the Military and I went back home to Bowling Green, Kentucky to attend Western Kentucky University.
+                     Where I Majored in Marketing and I graduated with a bachelors of science in marketing. Before graduating I accepted an entry level sales position with what was at the time Dell, Inc.
+                     (Dell Technologies). So I moved to Nashville and I began my career in technology sales at Dell. Over the last 15 years I have held various sales and technical presales postions 
+                     that are highlighted on
+                     my linkedin page(link included). Recently due to many economic factors my position was eliminated, but with one door closing. Another door opens and now I have the opportunity 
+                     to learn how to code and that is why I am attending a codeing bootcamp to build a solid foundation in coding by diving into the deep end of coding and learning by coding.
+                     <p>
+                     I have significant cloud and infrastructure knowledge by understanding software code and development. It better completes my knowledge level.
+                     So that I can be a better solutions architect and aspiring full time developer and E commerce entrepreneur. Please contact me to discuss postions
+                     you may have available. Please click on contact at the top right of the page for a contact form that will email me directly or please give me a call @
+                     404-725-8454 or by email <a href="mailto:scottpwells@gmailcom">Scott Wells</href>  <a href="https://www.linkedin.com/in/scott-wells-8262303/">Linkedin</href>
                   </p>
                   </div>
                 </div>
