--- a/portfolio.html
+++ b/portfolio.html
@@ -27,29 +27,36 @@
             </div>
           </nav>
           <div class="row"></div>
-               <div class="col-sm-8">
-              <div class="portfolio" id="portfolio-featured-section">
-                <div class="row">
+               <div class="col-sm-12">
+                <div class="row portfolio-featured-section">
                   <div class="col-sm-12">
                 <div class="card-title"><h4>Portfolio</h4></div>
                 <hr>
               <div class="row">
                 <div class="col-sm-6">
-                  <img src="https://www.fillmurray.com/350/350" alt="My future Portfolio Picture" class="portfolio-img-thumbnail">
+                  
+                  </a>
                 </div>
                 <div class="col-sm-6">
-                  <img src="https://www.fillmurray.com/350/350" alt="My future Portfolio Picture" class="portfolio-img-thumbnail">
+                  
                 </div>
                 <div class="row">
                   <div class="col-sm-6">
-                    <img src="https://www.fillmurray.com/350/350" alt="My future Portfolio Picture" class="portfolio-img-thumbnail">
+                    <h3 style=" text-align: center; color: teal;">Net Time Traveler</h3>
+                    <img src="https://github.com/scottpwells/project-1/blob/main/assets/image/Screenshot_1.png?raw=true" alt="Net Time Traveler" class="portfolio-img-thumbnail">
                     </div>
                   <div class="col-sm-6">
-                    <img src="https://www.fillmurray.com/350/350" alt="My future Portfolio Picture" class="portfolio-img-thumbnail">
+                    <h3 style=" text-align: center; color: teal;">Daily Planner</h3>
+                    <img src="https://github.com/scottpwells/daily-planner/raw/main/Daily-planner-screenshot.PNG" alt="Daily Planner" class="portfolio-img-thumbnail">
                   </div>
-                    <div class="row">
-                  <div class="col-sm-12">
-                  <img src="https://www.fillmurray.com/350/350" alt="My future Portfolio Picture" class="portfolio-img-thumbnail">
+                  <div class="col-sm-6">
+                    <h3 style=" text-align: center; color: teal;">Weather Dashboard</h3>
+                    <img src="https://user-images.githubusercontent.com/57837212/97452978-ae079800-190b-11eb-9f01-3ecb968e51fa.PNG" alt="Net Time Traveler" class="portfolio-img-thumbnail">
+                    </div>
+                  <div class="col-sm-6">
+                    <h3 style=" text-align: center; color: teal;">Password Generator</h3>
+                    <img src="https://user-images.githubusercontent.com/57837212/97462905-96cda800-1915-11eb-8118-7353985f90db.PNG" alt="Password Generator" class="portfolio-img-thumbnail">
+                  </div>
                       </div>
                   </div> 
                 </div>
