--- a/contact.html
+++ b/contact.html
@@ -17,12 +17,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
+                    <a class="nav-link active" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="contact.html">Contact</a>
+                  <a class="nav-link active" href="contact.html">Contact</a>
                   <li class="nav-item active">
-                   <a class="nav-link" href="index.html">About</a></li>
+                   <a class="nav-link active" href="index.html">About</a></li>
+                   <li><a class="nav-link active" href="https://www.linkedin.com/in/scott-wells-8262303/">linkedin</a></li>
+                   <li><a class="nav-link active" href="https://github.com/scottpwells">Git Hub Profile</a></li>
               </ul> 
             </div>
           </nav>
