--- a/portfolio.html
+++ b/portfolio.html
@@ -17,12 +17,17 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
+                    <a class="nav-link active" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
+                  <a class="nav-link active" href="contact.html">Contact</a>
                 </li>
-                <li><a class="nav-link" href="index.html">About</a></li>
+                <li class="nav-item active"></li>
+                <li><a class="nav-link active" href="index.html">About</a></li>
+                <li class="nav-item active"></li>
+                <li><a class="nav-link active" href="https://www.linkedin.com/in/scott-wells-8262303/">linkedin</a></li>
+                <li class="nav-item active"></li>
+                <li><a class="nav-link active" href="https://github.com/scottpwells">Git Hub Profile</a></li>
               </ul> 
             </div>
           </nav>
@@ -42,20 +47,20 @@
                 </div>
                 <div class="row">
                   <div class="col-sm-6">
-                    <h3 style=" text-align: center; color: teal;">Net Time Traveler</h3>
-                    <img src="https://github.com/scottpwells/project-1/blob/main/assets/image/Screenshot_1.png?raw=true" alt="Net Time Traveler" class="portfolio-img-thumbnail">
+                    <h3 style=" text-align: center; color: teal;">Net Time Traveler</h3> 
+                    <a href="https://scottpwells.github.io/project-1/"><img src="https://github.com/scottpwells/project-1/blob/main/assets/image/Screenshot_1.png?raw=true" alt="Net Time Traveler" class="portfolio-img-thumbnail"></a>
                     </div>
                   <div class="col-sm-6">
                     <h3 style=" text-align: center; color: teal;">Daily Planner</h3>
-                    <img src="https://github.com/scottpwells/daily-planner/raw/main/Daily-planner-screenshot.PNG" alt="Daily Planner" class="portfolio-img-thumbnail">
+                    <a href="https://scottpwells.github.io/daily-planner/"><img src="https://github.com/scottpwells/daily-planner/raw/main/Daily-planner-screenshot.PNG" alt="Daily Planner" class="portfolio-img-thumbnail"></a>
                   </div>
                   <div class="col-sm-6">
                     <h3 style=" text-align: center; color: teal;">Weather Dashboard</h3>
-                    <img src="https://user-images.githubusercontent.com/57837212/97452978-ae079800-190b-11eb-9f01-3ecb968e51fa.PNG" alt="Net Time Traveler" class="portfolio-img-thumbnail">
+                    <a href="https://scottpwells.github.io/weather-dashboard/"><img src="https://user-images.githubusercontent.com/57837212/97452978-ae079800-190b-11eb-9f01-3ecb968e51fa.PNG" alt="Net Time Traveler" class="portfolio-img-thumbnail"></a>
                     </div>
                   <div class="col-sm-6">
                     <h3 style=" text-align: center; color: teal;">Password Generator</h3>
-                    <img src="https://user-images.githubusercontent.com/57837212/97462905-96cda800-1915-11eb-8118-7353985f90db.PNG" alt="Password Generator" class="portfolio-img-thumbnail">
+                    <a href="https://scottpwells.github.io/Password-Generator/"><img src="https://user-images.githubusercontent.com/57837212/97462905-96cda800-1915-11eb-8118-7353985f90db.PNG" alt="Password Generator" class="portfolio-img-thumbnail"></a>
                   </div>
                       </div>
                   </div> 
