updated portfolio, updated resume

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,18 @@
                     <h3 style=" text-align: center; color: teal;">Password Generator</h3>
                     <a href="https://scottpwells.github.io/Password-Generator/"><img src="https://user-images.githubusercontent.com/57837212/97462905-96cda800-1915-11eb-8118-7353985f90db.PNG" alt="Password Generator" class="portfolio-img-thumbnail"></a>
                   </div>
-                      </div>
+                  <div class="col-sm-6">
+                    <h3 style=" text-align: center; color: teal;">Food Truck Chasers</h3>
+                    <a href="https://glacial-ocean-57671.herokuapp.com/"><img src="https://user-images.githubusercontent.com/57837212/102561206-1a984b00-40a2-11eb-8d58-de181881e629.PNG" alt="Food Truck Chasers" class="portfolio-img-thumbnail"></a>
+                  </div>
+                  <div class="col-sm-6">
+                    <h3 style=" text-align: center; color: teal;">Eat Da Burger</h3>
+                    <a href="https://blooming-citadel-27999.herokuapp.com/"><img src="https://user-images.githubusercontent.com/57837212/101704686-4472c180-3a53-11eb-9176-da9185e559fd.PNG" alt="Eat Da Burger" class="portfolio-img-thumbnail"></a>
+                  </div>
+
+
+
+                 </div>
                   </div> 
                 </div>
           </div>
